# iot_dosing_controller

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  ev-battery-hil.yml  fleet-routing-api.yml  grid-load-forecasting.yml
api/: main.py
aws_sensor_api/: pyproject.toml
aws_sensor_api/app/: archival.py  config.py  main.py  repository.py  schemas.py
aws_sensor_api/app/db/: models.py  session.py
aws_sensor_api/docker/: Dockerfile
aws_sensor_api/terraform/: main.tf  outputs.tf  variables.tf
aws_sensor_api/terraform/modules/ecs/: main.tf
aws_sensor_api/terraform/modules/rds/: main.tf
aws_sensor_api/terraform/modules/s3_iam/: main.tf
aws_sensor_api/terraform/modules/vpc/: main.tf
aws_sensor_api/tests/: conftest.py  test_api.py  test_archival.py  test_repository.py
collector/: db.py  modbus_reader.py
controller/: CMakeLists.txt  Dockerfile
controller/src/: DosingFsm.cpp  DosingFsm.h  FlowSensor.cpp  FlowSensor.h  ModbusServer.cpp  ModbusServer.h  RfidSimulator.cpp  RfidSimulator.h  main.cpp
controller/tests/: test_controller.cpp
docs/: aws-sensor-api.md  ev-battery-hil.md  fleet-routing-api.md  slm-sensor-analytics.md
ev_battery_hil/: README.md  pyproject.toml
ev_battery_hil/bms/: CMakeLists.txt
ev_battery_hil/bms/src/: BatteryModel.cpp  BatteryModel.h  BmsStateMachine.cpp  BmsStateMachine.h  TelemetryServer.cpp  TelemetryServer.h  main.cpp
ev_battery_hil/bms/tests/: test_bms.cpp
ev_battery_hil/docs/: fault-report-THERMAL-RUNAWAY-001.md
ev_battery_hil/orchestrator/app/: client.py  fault_injector.py  main.py  models.py  sequences.py
ev_battery_hil/orchestrator/sequences/: acceleration_pulse.yaml  capacity_test.yaml  constant_discharge.yaml  regen_braking.yaml
ev_battery_hil/orchestrator/tests/: conftest.py  test_api.py  test_client.py  test_fault_injector.py  test_models.py  test_sequences.py
ev_battery_hil/orchestrator/tools/: plot_fault_timeline.py
ev_battery_hil/scripts/: deploy.sh  run-smoke-test.sh
ev_battery_hil/systemd/: bms-daemon.service  orchestrator.service
fleet_routing_api/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
fleet_routing_api/app/: config.py  main.py
fleet_routing_api/app/api/: auth.py  deliveries.py  routes.py
fleet_routing_api/app/auth/: dependencies.py  jwt.py
fleet_routing_api/app/db/: base.py  models.py
fleet_routing_api/app/routing/: haversine.py  optimizer.py
fleet_routing_api/docs/: ROUTING-MATH.md
fleet_routing_api/tests/: conftest.py  test_auth.py  test_deliveries.py  test_haversine.py  test_optimizer.py  test_routes.py
grid_load_forecasting/: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
grid_load_forecasting/app/: config.py  main.py
grid_load_forecasting/app/api/v1/: routes.py
grid_load_forecasting/app/db/: models.py  session.py
grid_load_forecasting/app/models/: reading.py
grid_load_forecasting/app/services/: reading_service.py
grid_load_forecasting/app/workers/: forecaster.py  standalone.py
grid_load_forecasting/docker/: prometheus.yml
grid_load_forecasting/docs/: ADR-001-no-pandas.md  ADR-002-naive-extrapolation.md  DB-SCHEMA.md  QUERY-PLAN.md
grid_load_forecasting/migrations/: env.py
grid_load_forecasting/migrations/versions/: 001_initial_schema.py
grid_load_forecasting/scripts/: seed_db.py
grid_load_forecasting/tests/: conftest.py  test_api.py  test_forecaster.py  test_integration.py
plc_simulator/: simulator.py
renewables_portfolio_dispatch/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
renewables_portfolio_dispatch/app/: celery_app.py  config.py  database.py  main.py
renewables_portfolio_dispatch/app/fahrplan/: blob_store.py  router.py
renewables_portfolio_dispatch/app/forecast/: pipeline.py  router.py  tasks.py
renewables_portfolio_dispatch/app/models/: orm.py  schemas.py
renewables_portfolio_dispatch/app/optimizer/: dispatch.py  router.py
renewables_portfolio_dispatch/app/reopt/: worker.py
renewables_portfolio_dispatch/app/telemetry/: router.py
renewables_portfolio_dispatch/infra/: main.bicep  parameters.json
renewables_portfolio_dispatch/migrations/: env.py
renewables_portfolio_dispatch/migrations/versions/: 001_initial_schema.py
renewables_portfolio_dispatch/tests/: conftest.py  test_forecast.py  test_optimizer.py  test_reopt.py  test_telemetry.py
slm_sensor_analytics/: Dockerfile  README.md  alembic.ini  docker-compose.yml
slm_sensor_analytics/app/: __init__.py  config.py  main.py
slm_sensor_analytics/app/api/v1/: routes.py  schemas.py
slm_sensor_analytics/app/db/: models.py  session.py
slm_sensor_analytics/app/repositories/: alert_repo.py  sensor_repo.py
slm_sensor_analytics/app/services/: anomaly.py  features.py
slm_sensor_analytics/migrations/versions/: 001_initial_schema.py
slm_sensor_analytics/tests/: conftest.py  test_alerts.py  test_features.py  test_health.py  test_ingest.py  test_model.py  test_predict.py  test_train.py
tests/: test_api.py  test_collector.py
