[project]
name = "iot-dosing-controller"
version = "0.1.0"
description = "Edge IoT Dosing Controller — Modbus TCP + FastAPI + SQLite"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.0",
    "pymodbus>=3.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath   = ["."]
testpaths    = ["tests"]

[tool.ruff]
line-length = 100
src         = ["api", "collector", "plc_simulator"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
