[project]
name = "iot-dosing-controller"
version = "0.1.0"
description = "Edge IoT Dosing Controller + HIL EV Battery Test Simulator"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.0",
    "pymodbus>=3.5",
    "pyyaml>=6.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "loguru>=0.7.0",
    "prometheus-client>=0.20.0",
    "pydantic-settings>=2.3.0",
    "numpy>=1.26.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
    "aiosqlite>=0.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath   = ["."]
testpaths    = ["tests"]

[tool.ruff]
line-length = 100
src         = ["api", "collector", "plc_simulator", "orchestrator"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
