[project]
name = "aws-sensor-api"
version = "0.1.0"
description = "Cloud-native OEM sensor API on AWS — ECS Fargate + RDS + S3 + Terraform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "boto3>=1.34",
    "prometheus-client>=0.20",
    "python-json-logger>=2.0",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "moto[s3]>=5.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
pythonpath   = ["."]
addopts      = "--cov=app --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
