[project]
name = "renewables-portfolio-dispatch"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.0",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "loguru>=0.7",
    "cvxpy>=1.4",
    "statsmodels>=0.14",
    "scikit-learn>=1.5",
    "xgboost>=2.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "celery[redis]>=5.3",
    "redis>=5.0",
    "httpx>=0.27",
    "azure-storage-blob>=12.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
    "fakeredis>=2.23",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-redis>=4.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
pythonpath   = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
# cvxpy, celery, redis, statsmodels ship no type stubs — suppress all errors
module = ["cvxpy.*", "celery.*", "statsmodels.*", "redis.*", "fakeredis.*", "xgboost.*", "azure.*"]
ignore_errors = true
